crates/plotnik-lib/tests/05-typegen/quantifiers/error_quantified_named_node_capture_needs_row.txt
Bad = (array (identifier) @name)*
==== diagnostics ====
error: captures `@name` repeat with `*` but aren't collected into a list
 --> query.ptk:1:7
  |
1 | Bad = (array (identifier) @name)*
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: add a row capture so each repeat becomes one element: `(...)* @items`
